--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ compiler: gcc
 
 before_install:
   - sudo apt-get -qq update
-  - sudo apt-get install -y openssl openssl-devel
+  - sudo apt-get install -y openssl libssl-dev
 
 install: true
 
