--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ before_install:
 install: true
 
 script:
-  - make cert
-  - make
-  - make install
+  - sudo make cert
+  - sudo make
+  - sudo make install
